--- a/404.html
+++ b/404.html
@@ -1,8 +1,28 @@
----
-layout: not_found
----
+<!DOCTYPE html>
+<html lang="en">
 
-<style type="text/css" media="screen">
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" href="https://assahasranamam.github.io/tesrtx//assets/main.css" | relative_url }}">
+  <link rel="alternate" type="application/rss+xml" title="Coming Soon" href="/feed.xml">
+  
+</head>
+
+
+<body>
+  <main class="page-content" aria-label="Content">
+    <div id="bg" style="margin: 0;
+  padding: 0; background: url(https://assahasranamam.github.io/tesrtx//images/background.jpg) center fixed no-repeat;
+    -moz-background-size: cover;
+    background-size: cover; opacity:20%">
+  </div>
+
+<div id="container">
+
+  <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -22,3 +42,10 @@ layout: not_found
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+
+
+
+</div>
+
+</body>
+</html>
