Update github pages

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <h1 id="comming-soon">Comming Soon!</h1>
 
-<p><img src="https://github.com/ASSahasranamam/thesis/blob/primary/thesis/logo.png?raw=true" style="max-width:50%" />&lt;/img&gt;</p>
+<p><img src="https://github.com/ASSahasranamam/thesis/blob/primary/thesis/logo.png?raw=true" style="max-width:100%;" />&lt;/img&gt;</p>
 
-<p><img src="https://github.com/ASSahasranamam/thesis/blob/primary/thesis/logo.png?raw=true" alt="About 4" />
-{: style=”” width=40vw;”}.</p>
+<h3>
+</h3>
 
   <footer class="site-footer">
 
