Update github pages

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" href="https://assahasranamam.github.io/tesrtx//assets/main.css" | relative_url }}">
-  <link rel="alternate" type="application/rss+xml" title="Coming Soon" href="/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Adi" href="/feed.xml">
   
 </head>
 
@@ -61,7 +61,7 @@
             </li>
 <li>
             
-            email: <a href="mailto:youremailaddress">youremailaddress</a></li>
+            email: <a href="mailto:adi.sahasranamam@gmail.com">adi.sahasranamam@gmail.com</a></li>
             
 
           </h3>
