--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" href="https://assahasranamam.github.io/tesrtx//assets/main.css" | relative_url }}">
-  <link rel="alternate" type="application/rss+xml" title="Coming Soon" href="/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Adi" href="/feed.xml">
   
 </head>
 
