--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 
-<body>
-  <main class="page-content" aria-label="Content">
+<body style="max-height:100vh;">
+  <main class=" flex flex-column page-content" aria-label="Content">
     <div id="bg" style="margin: 0;
   padding: 0; background: url(https://assahasranamam.github.io/tesrtx//images/background.jpg) center fixed no-repeat;
     -moz-background-size: cover;
